# itk-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/: __init__.py  main.py
src/api/: __init__.py  users.py
src/config/: __init__.py  config.py
src/crud/: __init__.py  users.py
src/exceptions/: __init__.py  exceptions.py
src/migrations/: env.py
src/migrations/versions/: 4b23175cbb48_.py
src/models/: __init__.py  users.py
src/schemas/: __init.py  users.py
src/settings/: __init__.py  settings.py
